--- a/src/main/webapp/template/page/user-manager.html
+++ b/src/main/webapp/template/page/user-manager.html
@@ -19,6 +19,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <!-- MDB -->
     <link rel="stylesheet" href="css/mdb.min.css" />
+    <link rel="stylesheet" href="css/list-sound.css" />
 </head>
 <body>
 <main class="content" layout:fragment="content">
@@ -83,6 +84,21 @@
                     </tbody>
 
                 </table>
+                <nav aria-label="..." style="text-align: center">
+                    <ul class="pagination" >
+                        <li class="page-item disabled">
+                            <a class="page-link">Previous</a>
+                        </li>
+                        <li class="page-item"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item active" aria-current="page">
+                            <a class="page-link" href="#">2 <span class="visually-hidden">(current)</span></a>
+                        </li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item">
+                            <a class="page-link" href="#">Next</a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
             <hr>
         </div>
