--- a/src/main/webapp/template/page/list-sound.html
+++ b/src/main/webapp/template/page/list-sound.html
@@ -20,6 +20,7 @@
     <!-- MDB -->
     <link rel="stylesheet" href="css/mdb.min.css"/>
     <link rel="stylesheet" href="css/list-sound.css"/>
+
 </head>
 <body>
 <main class="content" layout:fragment="content">
@@ -78,7 +79,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col mt-0">
-                                <h5 class="card-title">Dễ ngủ</h5>
+                                <h5 class="card-title">Thấu hiểu</h5>
                             </div>
 
                             <div class="col-auto">
@@ -87,7 +88,7 @@
                                 </div>
                             </div>
                         </div>
-                        <h1 class="mt-1 mb-3" id="dengu">2.382</h1>
+                        <h1 class="mt-1 mb-3" id="thauhieu">2.382</h1>
                     </div>
                 </div>
                 <div class="card rounded-6 col-md-2 col-xl-2" style="width: 250px;height: 120px;">
@@ -166,9 +167,9 @@
 <!--                </tr>-->
                 </tbody>
             </table>
-            <nav aria-label="...">
-                <ul class="pagination">
-
+            <nav aria-label="..." style="display: flex; justify-content: center; align-items: center;">
+                <ul class="pagination" style="list-style: none; display: flex; justify-content: center; align-items: center; padding: 0; margin: 0;">
+                    <!-- Your pagination items go here -->
                 </ul>
             </nav>
         </div>
