--- a/src/main/webapp/template/page/user-manager.html
+++ b/src/main/webapp/template/page/user-manager.html
@@ -19,7 +19,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <!-- MDB -->
     <link rel="stylesheet" href="css/mdb.min.css" />
-    <link rel="stylesheet" href="css/list-sound.css" />
+<!--    <link rel="stylesheet" href="css/list-sound.css" />-->
 </head>
 <body>
 <main class="content" layout:fragment="content">
@@ -84,8 +84,8 @@
                     </tbody>
 
                 </table>
-                <nav aria-label="..." style="text-align: center">
-                    <ul class="pagination" >
+                <nav aria-label="..." style="display: flex; justify-content: center; align-items: center;s">
+                    <ul class="pagination" style="list-style: none; display: flex; justify-content: center; align-items: center; padding: 0; margin: 0;">
                         <li class="page-item disabled">
                             <a class="page-link">Previous</a>
                         </li>
