--- a/src/main/webapp/css/list-sound.css
+++ b/src/main/webapp/css/list-sound.css
@@ -1,22 +1,18 @@
-nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px; /* Adjust as needed for spacing from the content */
-}
+/*.page-link {*/
+/*    display: block;*/
+/*    padding: 10px;*/
+/*    text-decoration: none;*/
+/*    color: #007bff;*/
+/*    background-color: #fff;*/
+/*    border: 1px solid #dee2e6;*/
+/*    border-radius: 0.25rem;*/
 
-.pagination {
-    list-style: none;
-    display: flex;
-    gap: 10px; /* Adjust as needed for spacing between pagination items */
-    padding: 0;
-    margin: 0;
-}
+/*    !* Add any additional styling for pagination links here *!*/
+/*}*/
 
-.page-item {
-    /* Add any additional styling for pagination items here */
-}
-
-.page-link {
-    /* Add any additional styling for pagination links here */
-}
+/*.page-item.active .page-link {*/
+/*    z-index: 1;*/
+/*    color: #fff;*/
+/*    background-color: #007bff;*/
+/*    border-color: #007bff;*/
+/*}*/
