--- a/src/main/webapp/template/page/pages-profile.html
+++ b/src/main/webapp/template/page/pages-profile.html
@@ -98,7 +98,7 @@
                 </div>
                 <div class="card flex-fill w-100 rounded-6">
                     <div class="card-header">
-                        <h5 class="card-title">Biểu đồ số lượng người dùng tạo nhật ký</h5>
+                        <h5 class="card-title">Biểu đồ số lượng nhật ký được tạo</h5>
                     </div>
                     <div class="card-body">
                         <div class="chart">
