--- a/src/main/webapp/template/element/header.html
+++ b/src/main/webapp/template/element/header.html
@@ -214,9 +214,9 @@
                     <span id="username2" class="align-middle " style="font-style: normal;font-weight: bold;">222</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-end">
-                    <a class="dropdown-item" href="pages-profile.html"><i class="align-middle me-1"
+                    <a class="dropdown-item" href="/profile"><i class="align-middle me-1"
                                                                           data-feather="user"></i> Profile</a>
-                    <a class="dropdown-item" href="#"><i class="align-middle me-1" data-feather="pie-chart"></i>
+                    <a class="dropdown-item" href="/profile"><i class="align-middle me-1" data-feather="pie-chart"></i>
                         Analytics</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="index.html"><i class="align-middle me-1"
@@ -225,7 +225,7 @@
                     <a class="dropdown-item" href="#"><i class="align-middle me-1"
                                                          data-feather="help-circle"></i> Help Center</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Log out</a>
+                    <a class="dropdown-item" href="#" onclick="handleLogout()">Log out</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
