--- a/src/main/webapp/template/page/sound.html
+++ b/src/main/webapp/template/page/sound.html
@@ -114,11 +114,13 @@
                                 <h5 class="card-title mb-0">Poster</h5>
                             </div>
                             <div class="mb-3" style="margin-left: 30px">
-                                <img id="previewImage" class="rounded" style="margin-left: 30px" alt="Preview"
-                                     width="120" height="120">
+                                <div id="preview" class="rounded" style="margin-left: 30px"
+                                     width="120" height="120"></div>
+                                <span class="dragBox" >
+                                Darg and Drop image here
                                 <input class="form-control" type="file" style="margin-top: 10px" id="imageInput"
-                                       accept="image/*" onchange="displayImage(this)" name="multipartFile" multiple>
-
+                                       accept="image/*" onChange="dragNdrop(event)"  ondragover="drag()" ondrop="drop()" name="multipartFile" multiple>
+                                </span>
                             </div>
 
                         </div>
@@ -199,6 +201,22 @@
                 };
                 reader.readAsDataURL(input.files[0]);
             }
+        }
+
+        "use strict";
+        function dragNdrop(event) {
+            var fileName = URL.createObjectURL(event.target.files[0]);
+            var preview = document.getElementById("preview");
+            var previewImg = document.createElement("img");
+            previewImg.setAttribute("src", fileName);
+            preview.innerHTML = "";
+            preview.appendChild(previewImg);
+        }
+        function drag() {
+            document.getElementById('imageInput').parentNode.className = 'draging dragBox';
+        }
+        function drop() {
+            document.getElementById('imageInput').parentNode.className = 'dragBox';
         }
 
     </script>
