--- a/src/main/webapp/template/layout/default.html
+++ b/src/main/webapp/template/layout/default.html
@@ -17,7 +17,10 @@
 <!--	<link rel="stylesheet" href="css/user-manager.css">-->
 <!--	<link rel="stylesheet" href="index.css">-->
 <!--	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">-->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.2/dist/sweetalert2.min.css">
 
+	<!-- Include SweetAlert2 JS -->
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.2/dist/sweetalert2.all.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 
 </head>
