--- a/src/main/webapp/template/page/list-sound.html
+++ b/src/main/webapp/template/page/list-sound.html
@@ -124,6 +124,23 @@
                         <h1 class="mt-1 mb-3" id="giaitoa">2.382</h1>
                     </div>
                 </div>
+                <div class="card rounded-6 col-md-2 col-xl-2" style="width: 250px;height: 120px;">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col mt-0">
+                                <h5 class="card-title">Chữa lành</h5>
+                            </div>
+
+                            <div class="col-auto">
+                                <div class="stat text-primary">
+                                    <i class="fa-regular fa-face-grin-squint-tears"></i>
+
+                                </div>
+                            </div>
+                        </div>
+                        <h1 class="mt-1 mb-3" id="chualanh">2.382</h1>
+                    </div>
+                </div>
             </div>
 
     </div>
