--- a/src/main/webapp/template/page/pages-profile.html
+++ b/src/main/webapp/template/page/pages-profile.html
@@ -139,6 +139,21 @@
                     </div>
                 </div>
                 <div class="card rounded-6">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col mt-0 card-title">Độ tuổi trung bình của người dùng sử dụng app</h5>
+                            </div>
+
+                            <div class="col-auto">
+                                <div class="stat text-primary">
+                                    <i class="align-middle" data-feather="bar-chart-2"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <h1 class="mt-1 mb-3" id="aveage">2.382</h1>
+                    </div>
+                </div>
+                <div class="card rounded-6">
                     <div class="card-body rounded-6">
                         <div class="row">
                             <div class="col mt-0">
