--- a/src/main/webapp/template/page/sound.html
+++ b/src/main/webapp/template/page/sound.html
@@ -45,17 +45,9 @@
 </head>
 <body>
 <main class="content" layout:fragment="content">
-    <div class="container-fluid p-0">
-        <!--            <div class="row">-->
-        <!--                <div class="col-12 col-lg-6">-->
-        <!--                    <div class="mb-3">-->
-        <!--                        <h1 class="h3 d-inline align-middle">Thông tin âm thanh</h1>-->
-        <!--                    </div>-->
-        <!--                </div>-->
-        <!--            </div>-->
-
+    <div class="container-fluid p-0 ">
         <div class="row">
-            <div class="col-md-5 col-xl-5">
+            <div class="col-md-5 col-xl-5 card">
                 <div class="card">
                     <div class="mb-3">
                         <label for="audioInput" class="form-label card-title mb-0"> file input audio </label>
@@ -140,7 +132,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-7 col-xl-7">
+            <div class="col-md-7 col-xl-7 card">
                 <hr>
                 <div class="table-responsive overflow-scroll" style="max-height: 35%;overflow: auto;">
                     <table id="dtHorizontalExample" class="table table-striped table-bordered table-sm " cellspacing="0"
@@ -152,8 +144,6 @@
                             <th scope="col">Title</th>
                             <th scope="col">Author</th>
                             <th scope="col">Mood sound</th>
-<!--                            <th scope="col"></th>-->
-<!--                            <th scope="col"></th>-->
                         </tr>
                         </thead>
                         <tbody>
@@ -164,14 +154,6 @@
                             <td th:text="${sound.title}"></td>
                             <td th:text="${sound.author}"></td>
                             <td th:text="${sound.moodSound}"></td>
-<!--                            <td>-->
-<!--                                <button class="btn btn-outline-secondary">Update-->
-<!--                                </button>-->
-<!--                            </td>-->
-<!--                            <td>-->
-<!--                                <button class="btn btn-outline-danger" th:onclick="|deleteAudio('${sound.id}')|">Delete-->
-<!--                                </button>-->
-<!--                            </td>-->
                         </tr>
                         </tbody>
                     </table>
