--- a/src/main/webapp/template/page/user-manager.html
+++ b/src/main/webapp/template/page/user-manager.html
@@ -47,15 +47,15 @@
                     <thead class="thead-dark">
                     <tr class="text-center">
                         <th scope="col">ID Users</th>
-                        <th scope="col">avatar</th>
-                        <th scope="col">firstName</th>
-                        <th scope="col">lastName</th>
-                        <th scope="col">nickName</th>
-                        <th scope="col">email</th>
-                        <th scope="col">phone</th>
-                        <th scope="col">username</th>
-                        <th scope="col">status</th>
-                        <th scope="col">delete</th>
+                        <th scope="col">Avatar</th>
+                        <th scope="col">First Name</th>
+                        <th scope="col">Last Name</th>
+                        <th scope="col">Nick Name</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Phone</th>
+                        <th scope="col">Username</th>
+                        <th scope="col">Role</th>
+                        <th scope="col">Delete</th>
                     </tr>
                     </thead>
                     <tbody class="list-user-active">
@@ -84,7 +84,7 @@
                     </tbody>
 
                 </table>
-                <nav aria-label="..." style="display: flex; justify-content: center; align-items: center;s">
+                <nav aria-label="..." style="display: flex; justify-content: center; align-items: center;">
                     <ul class="pagination" style="list-style: none; display: flex; justify-content: center; align-items: center; padding: 0; margin: 0;">
                         <li class="page-item disabled">
                             <a class="page-link">Previous</a>
