--- a/src/main/webapp/template/page/diary-manager.html
+++ b/src/main/webapp/template/page/diary-manager.html
@@ -15,6 +15,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <link rel="stylesheet" href="css/mdb.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+
     <link href="css/app.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
 </head>
@@ -112,6 +114,7 @@
                                                     <div class="d-flex align-items-start card-comment" style="max-height: 40%">
                                                         <div class="user-info inline-block-container col-10">
                                                             <div id="cmt" class=" comment">
+
                                                             </div>
                                                         </div>
                                                     </div>
