--- a/src/main/webapp/css/list-sound.css
+++ b/src/main/webapp/css/list-sound.css
@@ -1,18 +1,65 @@
-/*.page-link {*/
-/*    display: block;*/
-/*    padding: 10px;*/
-/*    text-decoration: none;*/
-/*    color: #007bff;*/
-/*    background-color: #fff;*/
-/*    border: 1px solid #dee2e6;*/
-/*    border-radius: 0.25rem;*/
+/* Carousel Control */
+.carousel-control-color {
+    color: #fff;
+}
+.carousel-control {
+    width: 15%;
+    opacity: 0.5;
+    transition: opacity 0.15s ease;
+}
+.carousel-control:hover {
+    opacity: 0.9;
+}
 
-/*    !* Add any additional styling for pagination links here *!*/
-/*}*/
+/* Carousel Indicator */
+.carousel-indicator {
+    width: 30px;
+    height: 3px;
+    hit-area-height: 10px;
+    spacer: 3px;
+    opacity: 0.5;
+    transition: opacity 0.6s ease;
+}
+.carousel-indicator-active {
+    background-color: #fff;
+    opacity: 1;
+}
 
-/*.page-item.active .page-link {*/
-/*    z-index: 1;*/
-/*    color: #fff;*/
-/*    background-color: #007bff;*/
-/*    border-color: #007bff;*/
-/*}*/
+/* Carousel Caption */
+.carousel-caption {
+    width: 70%;
+    color: #fff;
+    padding-y: 1.25rem;
+    spacer: 1.25rem;
+}
+
+/* Carousel Control Icons */
+.carousel-control-icon {
+    width: 2rem;
+}
+
+/* Carousel Control Prev Icon */
+.carousel-control-prev-icon {
+    background: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#fff'><path d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/></svg>");
+}
+
+/* Carousel Control Next Icon */
+.carousel-control-next-icon {
+    background: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#fff'><path d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/></svg>");
+}
+
+/* Carousel Transition */
+.carousel-transition {
+    transition: transform 0.6s ease-in-out;
+}
+
+/* Carousel Dark Theme */
+.carousel-dark-indicator-active {
+    background-color: #000;
+}
+.carousel-dark-caption-color {
+    color: #000;
+}
+.carousel-dark-control-icon-filter {
+    filter: invert(1) grayscale(100);
+}
