--- a/src/main/webapp/template/page/list-sound.html
+++ b/src/main/webapp/template/page/list-sound.html
@@ -27,7 +27,7 @@
     <div class="container-fluid p-0">
 
             <div class="row">
-                <div class="card rounded-6 col-md-2 col-xl-2" style="width: 250px;height: 120px;">
+                <div class="card rounded-6 col-md-2 ms-auto" style="width: 250px;height: 120px;">
                     <div class="card-body">
                         <div class="row">
                             <div class="col mt-0">
@@ -43,7 +43,7 @@
                         <h1 class="mt-1 mb-3" id="quantitySound">2.382</h1>
                     </div>
                 </div>
-                <div class="card rounded-6 col-md-2 col-xl-2" style="width: 250px;height: 120px;">
+                <div class="card rounded-6 col-md-2 ms-auto" style="width: 250px;height: 120px;">
                     <div class="card-body">
                         <div class="row">
                             <div class="col mt-0">
@@ -59,7 +59,7 @@
                         <h1 class="mt-1 mb-3" id="vuive">2.382</h1>
                     </div>
                 </div>
-                <div class="card rounded-6 col-md-2 col-xl-2" style="width: 250px;height: 120px;">
+                <div class="card rounded-6 col-md-2 ms-auto" style="width: 250px;height: 120px;">
                     <div class="card-body">
                         <div class="row">
                             <div class="col mt-0">
@@ -75,7 +75,7 @@
                         <h1 class="mt-1 mb-3" id="thugian">2.382</h1>
                     </div>
                 </div>
-                <div class="card rounded-6 col-md-2 col-xl-2" style="width: 250px;height: 120px;">
+                <div class="card rounded-6 col-md-2 ms-auto" style="width: 250px;height: 120px;">
                     <div class="card-body">
                         <div class="row">
                             <div class="col mt-0">
@@ -84,14 +84,14 @@
 
                             <div class="col-auto">
                                 <div class="stat text-primary">
-                                    <i class="fa-regular fa-face-dizzy"></i>
+                                    <i class="far fa-face-grin-stars"></i>
                                 </div>
                             </div>
                         </div>
                         <h1 class="mt-1 mb-3" id="thauhieu">2.382</h1>
                     </div>
                 </div>
-                <div class="card rounded-6 col-md-2 col-xl-2" style="width: 250px;height: 120px;">
+                <div class="card rounded-6 col-md-2 ms-auto" style="width: 250px;height: 120px;">
                     <div class="card-body">
                         <div class="row">
                             <div class="col mt-0">
@@ -107,7 +107,7 @@
                         <h1 class="mt-1 mb-3" id="hanhphuc">2.382</h1>
                     </div>
                 </div>
-                <div class="card rounded-6 col-md-2 col-xl-2" style="width: 250px;height: 120px;">
+                <div class="card rounded-6 col-md-2 ms-auto" style="width: 250px;height: 120px;">
                     <div class="card-body">
                         <div class="row">
                             <div class="col mt-0">
@@ -124,7 +124,7 @@
                         <h1 class="mt-1 mb-3" id="giaitoa">2.382</h1>
                     </div>
                 </div>
-                <div class="card rounded-6 col-md-2 col-xl-2" style="width: 250px;height: 120px;">
+                <div class="card rounded-6 col-md-2 ms-auto" style="width: 250px;height: 120px;">
                     <div class="card-body">
                         <div class="row">
                             <div class="col mt-0">
@@ -133,7 +133,7 @@
 
                             <div class="col-auto">
                                 <div class="stat text-primary">
-                                    <i class="fa-regular fa-face-grin-squint-tears"></i>
+                                    <i class="far fa-face-smile-wink"></i>
 
                                 </div>
                             </div>
