--- a/src/main/webapp/template/page/diary-manager.html
+++ b/src/main/webapp/template/page/diary-manager.html
@@ -152,6 +152,16 @@
                         </div>
                     </div>
                 </div>
+                <div class="card flex-fill w-100 rounded-6" style="margin-top: 10px">
+                    <div class="card-header">
+                        <h5 class="card-title">Biểu đồ tổng nhật ký công khai theo từng tháng</h5>
+                    </div>
+                    <div class="card-bod">
+                        <div class="chart">
+                            <canvas id="barChart"></canvas>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <script src="js/diary-manager.js"></script>
