--- a/src/main/webapp/template/page/list-sound.html
+++ b/src/main/webapp/template/page/list-sound.html
@@ -43,22 +43,22 @@
                         <h1 class="mt-1 mb-3" id="quantitySound">2.382</h1>
                     </div>
                 </div>
-                <div class="card rounded-6 col-md-2 ms-auto" style="width: 250px;height: 120px;">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col mt-0">
-                                <h5 class="card-title">Vui vẻ</h5>
-                            </div>
+<!--                <div class="card rounded-6 col-md-2 ms-auto" style="width: 250px;height: 120px;">-->
+<!--                    <div class="card-body">-->
+<!--                        <div class="row">-->
+<!--                            <div class="col mt-0">-->
+<!--                                <h5 class="card-title">Vui vẻ</h5>-->
+<!--                            </div>-->
 
-                            <div class="col-auto">
-                                <div class="stat text-primary">
-                                    <i class="fa-regular fa-face-laugh-beam"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <h1 class="mt-1 mb-3" id="vuive">2.382</h1>
-                    </div>
-                </div>
+<!--                            <div class="col-auto">-->
+<!--                                <div class="stat text-primary">-->
+<!--                                    <i class="fa-regular fa-face-laugh-beam"></i>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <h1 class="mt-1 mb-3" id="vuive">2.382</h1>-->
+<!--                    </div>-->
+<!--                </div>-->
                 <div class="card rounded-6 col-md-2 ms-auto" style="width: 250px;height: 120px;">
                     <div class="card-body">
                         <div class="row">
@@ -161,7 +161,6 @@
                     <th scope="col" style="text-align: center">Title</th>
                     <th scope="col" style="text-align: center">Author</th>
                     <th scope="col" style="text-align: center">Mood sound</th>
-                    <th scope="col"></th>
                     <th scope="col"></th>
                 </tr>
                 </thead>
