--- a/src/main/webapp/css/sound.css
+++ b/src/main/webapp/css/sound.css
@@ -96,6 +96,19 @@ table.dataTable thead .sorting_desc_disabled:before {
 .uploadOuter strong {
     padding: 0 10px;
 }
+.upload-area-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left:100px;
+    width: 100%;
+    height: 100%;
+}
+
+.upload-area-icon svg {
+    max-width: 100%;
+    max-height: 100%;
+}
 
 .dragBox {
     width: 250px;
@@ -103,6 +116,9 @@ table.dataTable thead .sorting_desc_disabled:before {
     margin: 0 auto;
     position: relative;
     text-align: center;
+
+    flex-direction: column;
+    align-items: center;
     font-weight: bold;
     line-height: 95px;
     color: #999;
@@ -120,15 +136,313 @@ table.dataTable thead .sorting_desc_disabled:before {
     left: 0;
 }
 
-.draging {
-    transform: scale(1.1);
-}
-
 #preview {
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 120px;
+    height: 120px;
+
 }
 
 #preview img {
     max-width: 100%;
+    max-height: 100%;
+     /* Ensure the image takes the rounded shape */
 }
 
+
+
+/*input
+ */
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    outline: none;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    font-family: 'Poppins', sans-serif;
+}
+
+.container {
+    max-width: 800px;
+    background: #fff;
+    width: 800px;
+    padding: 25px 40px 10px 40px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.container .text {
+    text-align: center;
+    font-size: 41px;
+    font-weight: 600;
+    font-family: 'Poppins', sans-serif;
+    background: -webkit-linear-gradient(right, #56d8e4, #9f01ea, #56d8e4, #9f01ea);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.container form {
+    padding: 30px 0 0 0;
+}
+
+.container form .form-row {
+    display: flex;
+    margin: 32px 0;
+}
+
+form .form-row .input-data {
+    flex: 1; /* Make input-data take up all available space */
+    margin: 0 20px;
+    position: relative;
+}
+
+form .form-row .textarea {
+    height: 70px;
+}
+
+.input-data input,
+.textarea textarea {
+    display: block;
+    width: 100%;
+    height: 100%;
+    border: none;
+    font-size: 17px;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.12);
+}
+
+.input-data input:focus ~ label,
+.textarea textarea:focus ~ label,
+.input-data input:valid ~ label,
+.textarea textarea:valid ~ label {
+    transform: translateY(-20px);
+    font-size: 14px;
+    color: #3498db;
+}
+
+.textarea textarea {
+    resize: none;
+    padding-top: 10px;
+}
+
+.input-data label {
+    position: absolute;
+    pointer-events: none;
+    bottom: 10px;
+    font-size: 16px;
+    transition: all 0.3s ease;
+}
+
+.textarea label {
+    width: 100%;
+    bottom: 40px;
+    background: #fff;
+}
+
+.input-data .underline {
+    position: absolute;
+    bottom: 0;
+    height: 2px;
+    width: 100%;
+}
+
+.input-data .underline:before {
+    content: "";
+    height: 2px;
+    width: 100%;
+    background: #3498db;
+    transform: scaleX(0);
+    transform-origin: center;
+    transition: transform 0.3s ease;
+}
+
+.input-data input:focus ~ .underline:before,
+.input-data input:valid ~ .underline:before,
+.textarea textarea:focus ~ .underline:before,
+.textarea textarea:valid ~ .underline:before {
+    transform: scale(1);
+}
+
+.submit-btn .input-data {
+    overflow: hidden;
+    height: 45px !important;
+    width: 25% !important;
+}
+
+.submit-btn .input-data .inner {
+    height: 100%;
+    width: 300%;
+    position: absolute;
+    left: -100%;
+    background: -webkit-linear-gradient(right, #56d8e4, #9f01ea, #56d8e4, #9f01ea);
+    transition: all 0.4s;
+}
+
+.submit-btn .input-data:hover .inner {
+    left: 0;
+}
+
+.submit-btn .input-data input {
+    background: none;
+    border: none;
+    color: #fff;
+    font-size: 17px;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    cursor: pointer;
+    position: relative;
+    z-index: 2;
+}
+
+@media (max-width: 700px) {
+    .container .text {
+        font-size: 30px;
+    }
+    .container form {
+        padding: 10px 0 0 0;
+    }
+    .container form .form-row {
+        display: block;
+    }
+    form .form-row .input-data {
+        margin: 35px 0!important;
+    }
+    .submit-btn .input-data {
+        width: 40% !important;
+    }
+}
+
+/* upload
+ */
+*, *:after, *:before {
+    box-sizing: border-box;
+}
+
+:root {
+    --c-action-primary: #2e44ff;
+    --c-action-primary-accent: #e9e5ff;
+    --c-action-secondary: #e5e5e5;
+    --c-text-primary: #0d0f21;
+    --c-text-secondary: #6a6b76;
+    --c-background-primary: #d0d1de;
+}
+
+body {
+    font-family: "Inter", sans-serif;
+    color: var(--c-text-primary);
+    background-color: var(--c-background-primary);
+    line-height: 1.5;
+}
+
+input, button, select, textarea {
+    font: inherit;
+}
+
+
+
+.modal-header {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 1.5rem 1.5rem 1rem;
+}
+
+
+
+.btn-close {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 2.25rem;
+    height: 2.25rem;
+    border-radius: .25rem;
+    border: none;
+    background-color: transparent;
+    &:hover, &:focus {
+        background-color: var(--c-action-primary-accent);
+    }
+}
+
+.modal-body {
+    padding: 1rem 1.5rem;
+}
+
+.modal-title {
+    font-weight: 700;
+}
+
+.modal-description {
+    color: var(--c-text-secondary);
+}
+
+.upload-area {
+    margin-top: 1.25rem;
+    border: none;
+    background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='%23ccc' stroke-width='3' stroke-dasharray='6%2c 14' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
+    background-color: transparent;
+    padding: 3rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    &:hover, &:focus {
+        background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='%232e44ff' stroke-width='3' stroke-dasharray='6%2c 14' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
+    }
+}
+
+.upload-area-icon {
+    display: block;
+    width: 2.25rem;
+    height: 2.25rem;
+    svg {
+        max-height: 100%;
+        max-width: 100%;
+    }
+}
+
+.upload-area-title {
+    margin-top: 1rem;
+    display: block;
+    font-weight: 700;
+    color: var(--c-text-primary);
+}
+
+.upload-area-description {
+    display: block;
+    color: var(--c-text-secondary);
+    strong {
+        color: var(--c-action-primary);
+        font-weight: 700;
+    }
+}
+
+.modal-footer {
+    padding: 1rem 1.5rem 1.5rem;
+    display: flex;
+    justify-content: flex-end;
+    [class*="btn-"] {
+        margin-left: .75rem;
+    }
+}
+
+.btn-secondary, .btn-primary {
+    padding: .5rem 1rem;
+    font-weight: 500;
+    border: 2px solid var(--c-action-secondary);
+    border-radius: .25rem;
+    background-color: transparent;
+}
+
+.btn-primary {
+    color: #FFF;
+    background-color: var(--c-action-primary);
+    border-color: var(--c-action-primary);
+}
