--- a/src/main/webapp/template/page/diary-manager.html
+++ b/src/main/webapp/template/page/diary-manager.html
@@ -111,7 +111,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="d-flex align-items-start card-comment" style="max-height: 40%">
-                                                        <div class="user-info inline-block-container col-10">
+                                                        <div class="user-info inline-block-container col-12">
                                                             <div id="cmt" class=" comment">
 
                                                             </div>
@@ -164,6 +164,7 @@
                 </div>
             </div>
         </div>
+        <div></div>
         <script src="js/diary-manager.js"></script>
 <!--        <script src="js/modal.js"></script>-->
 <!--        <script>-->
