--- a/src/main/webapp/template/page/sound.html
+++ b/src/main/webapp/template/page/sound.html
@@ -44,7 +44,7 @@
     </style>
 </head>
 <body>
-<main class="content" layout:fragment="content">
+<main class="content overflow-scroll" layout:fragment="content">
     <div class="container-fluid p-0 ">
         <div class="row overflow-auto">
             <div class="col-md-5 col-xl-5 card">
